--- a/epub-styles.css
+++ b/epub-styles.css
@@ -32,6 +32,8 @@
 /* Table of Contents styling */
 .toc {
   page-break-after: always;
+  margin-left: 8em;
+  margin-right: 8em;
 }
 
 .toc h1 {
@@ -44,12 +46,12 @@
 
 .toc ul {
   list-style: none;
-  padding-left: 0;
+  padding-left: 2em;
   line-height: 1.8;
 }
 
 .toc ul ul {
-  padding-left: 15px;
+  padding-left: 2.5em;
   margin-top: 0.5em;
 }
 
